# rmr-projection-api

./: .gitignore  .releaserc  CHANGELOG.md  Dockerfile  README.md  docker-compose-devcontainer.yml  docker-compose-observability-stack.yml  pyproject.toml  requirements.txt  sonar-project.properties
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose-development.yml  ownerships.sh  requirements.txt
.github/workflows/: build-and-push-to-dockerhub.yml  ci.yml  docker_hub_courier.yml  release.yml
mkModules/: git.mk  service.mk
service/: .dockerignore  Dockerfile  Procfile  main.py  requirements.txt
service/models/: metadata.py  model.py  time_projection.py
service/otel/: __init__.py
service/src/: main.py  schemas.py
service/src/models/: model.py
service/src/routers/: rmr.py
service/src/tests/: conftest.py  test_equations.py  test_main.py  test_model.py  test_time_projection.py
service/tests/: conftest.py  test_main.py  test_model.py
src/: Procfile  main.py
src/models/: equations.py  schemas.py
src/otel/: otel_logs.py  otel_metrics.py  otel_traces.py
src/tests/: conftest.py  test_main.py
