[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
ignore = [
    "E203",
    "E501",
    "W503"
    ]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".devcontainer"
    ]
exit-zero = true

[tool.pytest.ini_options]
addopts = [
    "--pspec",
    "--cov=service",
    "--cov-report=term-missing"
]

[tool.coverage.run]
omit = [
    "otel/*"  # Exclude everything inside otel/
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.poetry]
name = "rmr-api"
version = "0.1.0"
description = "A RESTful API for calculating Resting Metabolic Rate using Mifflin-St. Jeor equations"
authors = ["Yifattih <yifattih@proton.me>"]